addet new world

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <button class="form__button">Przelicz wartość</button>
 
           <p>
-            kwota po wymianie: <span class="form__result js-result">0</span> PLN
+            kwota waluty po wymianie: <span class="form__result js-result">0</span> PLN
           </p>
         </fieldset>
       </form>
